--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,7 @@
 ---
+# Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "{{ site.theme }}";
+$content-width: 100%;
 
-.inner {
-  max-width: 100%;
-}
+@import "minima";
