--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,4 +2,16 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+$content-width:    800px;
+$on-palm:          600px;
+$on-laptop:        800px;
+
+textarea {
+  max-width: 100%
+}
+
+form{
+  font-size: 100%
+}
+
 @import "minima";
